--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,16 +8,17 @@
         <link rel="stylesheet" href="{% static 'css/blog.css'%}">
     </head>
     <body>
-    <div class="page-header">
+    	<div class="page-header">
+    		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">The Best Blog of All</a></h1>
-    </div>
-    <div class="content container">
+    	</div>
+    	<div class="content container">
         <div class="row">
             <div class="col-md-8">
             {% block content %}
             {% endblock %}
             </div>
         </div>
-    </div>
+    	</div>
     </body>
 </html>
